--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/MarquesThomasCoding/finding-files/issues"
   },
-  "homepage": "https://github.com/MarquesThomasCoding/finding-files#readme"
+  "homepage": "https://github.com/MarquesThomasCoding/finding-files#readme",
+  "devDependencies": {
+    "typescript": "^5.8.3"
+  }
 }
