--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Looking which file is used in a page? With this library, you'll have a complete list of each files used by the current page.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,9 @@
   },
   "homepage": "https://github.com/MarquesThomasCoding/finding-files#readme",
   "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "jest": "^30.0.4",
+    "ts-jest": "^29.4.0",
     "typescript": "^5.8.3"
   }
 }
