--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "@imprion91/finding-files",
   "version": "1.1.1",
   "description": "Looking which file is used in a page? With this library, you'll have a complete list of each files used by the current page.",
-  "main": "./dist/index.js",
-  "types": "./dist/types/index.d.ts",
+  "main": "./dist/src/index.js",
+  "types": "./dist/src/types/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.js",
-      "types": "./dist/types/index.d.ts"
+      "import": "./dist/src/index.js",
+      "require": "./dist/src/index.js",
+      "types": "./dist/src/types/index.d.ts"
     }
   },
   "scripts": {
